--- a/input_cards/variable_input.yml
+++ b/input_cards/variable_input.yml
@@ -33,3 +33,17 @@ bg_volume:
   data type: int
   sparse: True
   level: 0
+
+primal_volume_center:
+  type: volumes
+  data size: 1
+  data type: int
+  sparse: True
+  level: 0
+
+primal_face_center:
+  type: faces
+  data size: 1
+  data type: int
+  sparse: True
+  level: 0
