chore: add primal_face mesh property

--- a/input_cards/variable_input.yml
+++ b/input_cards/variable_input.yml
@@ -47,3 +47,10 @@ primal_face_center:
   data type: int
   sparse: True
   level: 0
+
+primal_face:
+  type: faces
+  data size: 1
+  data type: int
+  sparse: True
+  level: 0
