chore: add dual face mesh property

--- a/input_cards/variable_input.yml
+++ b/input_cards/variable_input.yml
@@ -61,3 +61,10 @@ dual_mesh_edge:
   data type: int
   sparse: True
   level: 0
+
+dual_mesh_face:
+  type: volumes
+  data size: 1
+  data type: int
+  sparse: True
+  level: 0
